// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@modular-css/path-aliases should be usable as a modular-css resolver 1`] = `
Object {
  "packages/aliases/test/specimens/one/sub/sub.css": Object {
    "sub": Array [
      "mc_sub",
    ],
  },
  "packages/aliases/test/specimens/two/two.css": Object {
    "two": Array [
      "mc_two",
    ],
  },
  "packages/paths/test/specimens/one/start.css": Object {
    "rule": Array [
      "mc_two",
      "mc_rule",
    ],
  },
}
`;

exports[`@modular-css/path-aliases should fall through to the default resolver 1`] = `
Object {
  "packages/aliases/test/specimens/two/two.css": Object {
    "two": Array [
      "mc_two",
    ],
  },
  "packages/paths/test/specimens/one/start.css": Object {
    "rule": Array [
      "mc_two",
      "mc_rule",
    ],
  },
  "packages/paths/test/specimens/one/sub/sub.css": Object {
    "sub": Array [
      "mc_sub",
    ],
  },
}
`;
